@@ -299,8 +299,7 @@ dist_bin_SCRIPTS = \
 	src/kernel-install/kernel-install
 
 dist_kernelinstall_SCRIPTS = \
-	src/kernel-install/50-depmod.install \
-	src/kernel-install/90-loaderentry.install
+	src/kernel-install/50-depmod.install
 
 rootlibexec_PROGRAMS = \
 	systemd \
