@@ -55,6 +55,8 @@ systemd System and Service Manager
     - don't show unit logs;
     - remove libsystemd-logs library;
     - remove lines argument option;
+ * kernel-install:
+    - remove 90-loaderentry.install script;
  * remove libsystemd-logs library;
  * remove bootchart support;
  * unit:
